made code pretty and added analysis
added some notes for better understanding

--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "In this notebook we try to analyze the differential abundance in our samples. Meaning we try to test whether individual ASVs/taxa differ in abundance between samples groups. :)\n",
     "\n",
-    "We will first try to explore the data (finding out that data is not normalverteilt, shocking) and then try to use ANCOM as appropriate statistical test. "
+    "This can be done via ANCOM as appropriate statistical test (Kruskal-Wallis), yay!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "d9dc25a8-8ca7-4492-9de7-57988c153ad8",
    "metadata": {},
    "outputs": [],
@@ -36,8 +36,7 @@
    "source": [
     "Artifacts we need to run this Notebook:\n",
     "1. feature table = 'dada2_table_align_filtered.qza'\n",
-    "2. metadata table = 'food-metadata.tsv'\n",
-    "3. taxonomic classification = 'taxonomy_v4.qza'\n"
+    "2. metadata table = 'food-metadata.tsv'"
    ]
   },
   {
@@ -47,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##Data Exploration"
+    "## Data Exploration"
    ]
   },
   {
@@ -658,7 +657,7 @@
    "id": "e8f13126-ffaf-4614-ad4b-71c3659f3ee6",
    "metadata": {},
    "source": [
-    "##ANCOM"
+    "## ANCOM"
    ]
   },
   {
@@ -706,46 +705,12 @@
     "--i-table $data_dir/table_abund254.qza \\\n",
     "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
     "--p-where \"[continent]='North_America' or [continent]='Europe'\" \\\n",
-    "--o-filtered-table $data_dir/table_abund254_continent.qza"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "603b0b3a-78b6-4d9c-a988-ec7d8c5d7250",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_continent_comp.qza\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
+    "--o-filtered-table $data_dir/table_abund254_continent.qza\n",
+    "\n",
     "! qiime composition add-pseudocount \\\n",
     "--i-table $data_dir/table_abund254_continent.qza \\\n",
-    "--o-composition-table $data_dir/table_abund254_continent_comp.qza"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0fc2d27b-4406-488e-b61c-c855cbc32ef0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved Visualization to: CE/ancom254_continent.qzv\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
+    "--o-composition-table $data_dir/table_abund254_continent_comp.qza\n",
+    "\n",
     "! qiime composition ancom \\\n",
     "--i-table $data_dir/table_abund254_continent_comp.qza \\\n",
     "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
@@ -755,8 +720,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63546696-ae73-4e7a-ae1e-78729766848b",
+   "metadata": {},
+   "source": [
+    "RESULT: only 2 significantly differently abundant features ID in group comparison continents: 8bd6e175eeb3db8a8390a55b78c8d176 and 805c1b3ec3035abbb7b9f1f7f6157e12 both more abundant in europe. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "578c75bd-1f4f-4453-9257-5dc163167e40",
    "metadata": {},
    "outputs": [
@@ -793,13 +766,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-5lqh1x2n')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-u_2ddit1')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 5a396199-ab44-4629-b1e5-7372795d30ad>"
+       "<visualization: Visualization uuid: ad5978df-bdcf-4ca2-8eeb-394976fe81f4>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,46 +802,12 @@
     "--i-table $data_dir/table_abund254.qza \\\n",
     "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
     "--p-where \"[rindtype]='washed' or [rindtype]='natural'\" \\\n",
-    "--o-filtered-table $data_dir/table_abund254_rindtype1.qza"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f963e693-3f30-468c-98fb-1f6b81f901d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_rindtype1_comp.qza\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
+    "--o-filtered-table $data_dir/table_abund254_rindtype1.qza\n",
+    "\n",
     "! qiime composition add-pseudocount \\\n",
     "--i-table $data_dir/table_abund254_rindtype1.qza \\\n",
-    "--o-composition-table $data_dir/table_abund254_rindtype1_comp.qza"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "3171b48d-2a29-475b-9aa2-e950fd874960",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mSaved Visualization to: CE/ancom254_rindtype1.qzv\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
+    "--o-composition-table $data_dir/table_abund254_rindtype1_comp.qza\n",
+    "\n",
     "! qiime composition ancom \\\n",
     "--i-table $data_dir/table_abund254_rindtype1_comp.qza \\\n",
     "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
@@ -878,8 +817,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb3a2fed-8a18-4ee0-9a23-04343ec062f5",
+   "metadata": {},
+   "source": [
+    "RESULT: 26 significantly different abundant feature IDs when comparing washed vs natural (rindtype)! "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "b549df62-44ab-4f49-847e-4fefb3ca1d62",
    "metadata": {},
    "outputs": [
@@ -916,13 +863,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ijgamdox')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-mpqqn7si')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 6fe79d08-1d21-4913-b78a-0bd538dedd9a>"
+       "<visualization: Visualization uuid: 4ccc42b7-b28d-4342-a875-be695488a917>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,8 +917,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1337f1d8-fc9c-4bd9-9f0d-153fc1f7770a",
+   "metadata": {},
+   "source": [
+    "RESULT: 26 significantly different abundant feature IDs when comparing bloomy vs natural (rindtype)! "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3adc95d0-0ab1-440c-b08b-3293c09cb658",
    "metadata": {},
    "outputs": [
@@ -1008,13 +963,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-6ynulivq')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-i_ht8xg9')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 566e004d-345b-4df2-b714-47950a56496c>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,8 +1017,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "051d7aa6-539c-4388-8bf8-871b50247b9c",
+   "metadata": {},
+   "source": [
+    "RESULT: 20 significantly different abundant feature IDs when comparing bloomy vs natural (rindtype)! "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d0838900-3715-4833-a5e2-909997a68e6d",
    "metadata": {},
    "outputs": [
@@ -1100,13 +1063,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-p6adlxnu')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-mucz103c')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 4c356061-5e6a-476f-9175-f3bacd290742>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,8 +1117,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52d76885-6154-4c84-b13d-fd9585c0d33f",
+   "metadata": {},
+   "source": [
+    "RESULT: 4 significantly different abundant feature IDs when comparing blue vs clothbound (style) ! "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "48952383-d53d-4da6-893d-d49b271b4153",
    "metadata": {},
    "outputs": [
@@ -1192,13 +1163,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-tyqbuv66')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-rlwja7bh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 5a996b96-aaec-4daf-a081-40053e033fbf>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
