--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -35,8 +35,9 @@
    "metadata": {},
    "source": [
     "Artifacts we need to run this Notebook:\n",
-    "1. feature table = 'dada2_table_align_filtered.qza'\n",
-    "2. metadata table = 'food-metadata.tsv'"
+    "1. feature table = `dada2_table_align_filtered.qza`\n",
+    "2. metadata table = `food-metadata.tsv`\n",
+    "3. taxonomy classification = `taxonomy_v4.qza`"
    ]
   },
   {
@@ -784,6 +785,130 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d66523ce-8828-4180-8e81-53837b2c2a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund504.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#what if we use a higher minimal frequency ? (50)\n",
+    "#only retain features that are present at some minimal frequency (50) and in at least 4 samples\n",
+    "! qiime feature-table filter-features \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--p-min-frequency 50 \\\n",
+    "--p-min-samples 4 \\\n",
+    "--o-filtered-table $data_dir/table_abund504.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "78f47f38-cd96-4137-ba00-56bfe89ffc83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund504_continent.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund504_continent_comp.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Visualization to: CE/ancom504_continent.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within continents BUT WITH minimal frequency (50)\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund504.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[continent]='North_America' or [continent]='Europe'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund504_continent.qza\n",
+    "\n",
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund504_continent.qza \\\n",
+    "--o-composition-table $data_dir/table_abund504_continent_comp.qza\n",
+    "\n",
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund504_continent_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column continent \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom504_continent.qzv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df5f41af-c40b-4e43-b0df-6904e19a71fd",
+   "metadata": {},
+   "source": [
+    "**NOTE:** approx. same values, we will stick to 25 as minimal frequency. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "807099de-9f94-4a9f-a799-fb1311e7c3bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-v6hjcr6n')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 2e386a9c-8e32-4a9b-b4d8-11c50c6cd0f6>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom504_continent.qzv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ce773b16-5b6c-4032-8088-5352e3162d87",
    "metadata": {},
    "outputs": [
@@ -821,7 +946,7 @@
    "id": "eb3a2fed-8a18-4ee0-9a23-04343ec062f5",
    "metadata": {},
    "source": [
-    "RESULT: 26 significantly different abundant feature IDs when comparing washed vs natural (rindtype)! "
+    "**RESULT:** 26 significantly different abundant feature IDs when comparing washed vs natural (rindtype)! "
    ]
   },
   {
@@ -921,7 +1046,7 @@
    "id": "1337f1d8-fc9c-4bd9-9f0d-153fc1f7770a",
    "metadata": {},
    "source": [
-    "RESULT: 26 significantly different abundant feature IDs when comparing bloomy vs natural (rindtype)! "
+    "**RESULT:** 26 significantly different abundant feature IDs when comparing bloomy vs natural (rindtype)! "
    ]
   },
   {
@@ -1013,7 +1138,7 @@
     "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
     "--m-metadata-column rindtype \\\n",
     "--p-transform-function log \\\n",
-    "--o-visualization $data_dir/ancom254_rindtype3.qzv"
+    "--o-visualization $data_dir/ancom245_rindtype3.qzv"
    ]
   },
   {
@@ -1077,6 +1202,111 @@
    "source": [
     "Visualization.load(f'{data_dir}/ancom254_rindtype3.qzv')\n",
     "#bloomy vs. washed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d4e6eb81-b3f0-47ff-9158-f2b425326284",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_l6.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_rindtype3_l6.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_rindtype3_comp_l6.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Visualization to: CE/ancom245_rindtype3_l6.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#now we could collapse the abundancy of ASV with our taxonomic classification\n",
+    "! qiime taxa collapse \\\n",
+    "    --i-table $data_dir/table_abund254.qza \\\n",
+    "    --i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "    --p-level 6 \\\n",
+    "    --o-collapsed-table $data_dir/table_abund254_l6.qza\n",
+    "\n",
+    "! qiime feature-table filter-samples \\\n",
+    "    --i-table $data_dir/table_abund254_l6.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --p-where \"[rindtype]='bloomy' or [rindtype]='washed'\" \\\n",
+    "    --o-filtered-table $data_dir/table_abund254_rindtype3_l6.qza\n",
+    "\n",
+    "! qiime composition add-pseudocount \\\n",
+    "    --i-table $data_dir/table_abund254_rindtype3_l6.qza \\\n",
+    "    --o-composition-table $data_dir/table_abund254_rindtype3_comp_l6.qza\n",
+    "\n",
+    "! qiime composition ancom \\\n",
+    "    --i-table $data_dir/table_abund254_rindtype3_comp_l6.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column rindtype \\\n",
+    "    --o-visualization $data_dir/ancom245_rindtype3_l6.qzv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05fe86fd-c996-4f76-8693-267acbe6f1db",
+   "metadata": {},
+   "source": [
+    "**RESULT:** `k__Bacteria;p__Actinobacteria;c__Actinobacteria;o__Actinomycetales;f__Corynebacteriaceae;g__Corynebacterium` (W 122)is more abundant in washed cheese whereas `k__Bacteria;p__Firmicutes;c__Bacilli;o__Lactobacillales;f__Streptococcaceae;g__Lactococcus` (W 121) is more abundant in blommy cheese !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d0c60155-6bb2-433f-8dc9-df25eac63fc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-eb67qp1b')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 529695ba-d741-4422-b6ad-ee74d9812bd5>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom245_rindtype3_l6.qzv')"
    ]
   },
   {
@@ -1217,8 +1447,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43bea351-03a5-43c7-80c1-3ae2cdd9a4b2",
+   "metadata": {},
+   "source": [
+    "RESULT: 7 significantly different abundant feature IDs when comparing pasteurization (yes vs no) ! "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5b94a59c-e383-4ea5-82ca-46fe280f6c9b",
    "metadata": {},
    "outputs": [
@@ -1255,13 +1493,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-doiifhet')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-6bse710g')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 8fdd2837-26b4-438f-99ed-febcd0259929>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,14 +1508,6 @@
     "Visualization.load(f'{data_dir}/ancom254_pasteurized.qzv')\n",
     "#Y vs. N"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "289efb3c-d6ef-4ad1-8098-005f78cb72a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
