--- a/Data visualization.ipynb
+++ b/Data visualization.ipynb
@@ -11,47 +11,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6897ce7c-6bc6-4d4a-970b-2b4b6480f7d0",
+   "execution_count": 4,
+   "id": "045a0c44-3218-4102-9978-48cc516351d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import math\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "from qiime2 import Visualization\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scipy import stats\n",
-    "\n",
-    "data_dir = 'CE'\n",
-    "\n",
-    "# this is to silence pandas' warnings\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore')\n",
-    "    \n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "045a0c44-3218-4102-9978-48cc516351d1",
+   "id": "6897ce7c-6bc6-4d4a-970b-2b4b6480f7d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1137994459.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    conda create -y -n q2coord\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "def assign_elevation_level(x):\n",
-    "    \"\"\"\n",
-    "    Assigns elevation profile based on \n",
-    "    elevation in meters above sea level.\n",
-    "    \"\"\"\n",
-    "    if x <= 500: \n",
-    "        return 'low'\n",
-    "    elif 500 < x <= 1500:\n",
-    "        return 'medium'\n",
-    "    else:\n",
-    "        return 'high'"
+    "qiime diversity alpha \\\n",
+    "    --i-table even_table.qza \\\n",
+    "    --p-metric observed_features \\\n",
+    "    --o-alpha-diversity alpha_diversity_sample.qza\n",
+    "\n",
+    "qiime coordinates draw-map \\\n",
+    "    --m-metadata-file alpha_diversity_sample.qza \\\n",
+    "    --m-metadata-file chardonnay_sample_metadata.txt \\\n",
+    "    --p-latitude latitude \\\n",
+    "    --p-longitude longitude \\\n",
+    "    --p-column observed_features \\\n",
+    "    --o-visualization diversity-map.qzv"
    ]
   },
   {
