--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -35,9 +35,9 @@
    "metadata": {},
    "source": [
     "Artifacts used for alpha-diversity (start)\n",
-    "- dada2_table_align_filtered.qza\n",
-    "- fasttree-tree-rooted.qza\n",
-    "- sepp-tree.qza"
+    "- dada2_table_align_filtered.qza  --> taxonomy.ipynb\n",
+    "- fasttree-tree-rooted.qza  --> taxonomy.ipynb\n",
+    "- sepp-tree.qza  --> taxonomy.ipynb"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "Which tree should be chosen to conduct alpha rarefaction? the de-novo tree or fragment insertion tree? \n",
-    "-> fragment insertion tree was chosen, das we have rather short sequences which might not bring up enough information.\n",
+    "-> fragment insertion tree was chosen, as we have rather short sequences which might not bring up enough information.\n",
     "Artifacts of both trees are visualized here:"
    ]
   },
